--- a/projects.html
+++ b/projects.html
@@ -748,36 +748,80 @@
     </div>
   </section>
 
-  <!-- WEB & CONTENT -->
-  <section id="web" class="py-16 bg-gray-50 dark:bg-gray-950 border-t border-gray-200 dark:border-gray-800">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex items-center gap-3">
-        <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-cyan-600 text-white font-bold">WEB</span>
-        <h2 class="text-3xl font-extrabold">Web Design & Online Content</h2>
-      </div>
-      <p class="mt-2 text-gray-700 dark:text-gray-300">Projects in web presence, consultancy branding, and learning systems for organizations.</p>
-      <div class="mt-6 grid md:grid-cols-3 gap-6">
-        <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Portfolio site" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop"/>
-          <h3 class="text-xl font-bold">Portfolio Website (2025) · franklindelacruz.com</h3>
-          <p class="mt-2 text-gray-700 dark:text-gray-300">HTML from scratch, styled with Tailwind; hosted on GitHub & published via Cloudflare. Built to highlight career projects; completed in two days (Sept 2025).</p>
-          <ul class="mt-3 text-sm list-disc pl-5 text-gray-700 dark:text-gray-300">
-            <li>DNS + SSL; content model for projects</li>
-            <li>Fast, accessible, responsive</li>
-          </ul>
-        </article>
-        <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Consultancy site" src="/assets"/>
-          <h3 class="text-xl font-bold">DLC Consultancy (2024) · dlcconsultancy.com</h3>
-          <p class="mt-2 text-gray-700 dark:text-gray-300">WIX site with SEO, services pages, and lead capture.</p>
-        </article>
-        <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-          <img class="rounded-xl mb-4" alt="Drupal LMS" src="/assets/images/drupal.png"/>
-          <h3 class="text-xl font-bold">YMCA South Palm Beach Florida Enablement Portal (2015)</h3>
-          <p class="mt-2 text-gray-700 dark:text-gray-300">Drupal LMS on AWS: modules, media, roles/permissions, and maintenance.</p>
-        </article>
-      </div>
-    </div>
+<!-- WEB & CONTENT SECTION -->
+<section id="web" class="py-16 bg-gray-50 dark:bg-gray-950 border-t border-gray-200 dark:border-gray-800">
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+<div class="flex items-center gap-3">
+<span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-pink-600 text-white font-bold">WC</span>
+<h2 class="text-3xl font-extrabold">Web Design & Online Content</h2>
+</div>
+<p class="mt-2 text-gray-700 dark:text-gray-300">Projects in web presence, consultancy branding, and learning systems for organizations.</p>
+<div class="mt-6 grid md:grid-cols-3 gap-6">
+<!-- Portfolio Website -->
+<article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
+<img class="rounded-xl mb-4" alt="Portfolio site" src="/assets/images/fdlcsite.png"/>
+<h3 class="text-xl font-bold">Portfolio Website (2025) · franklindelacruz.com</h3>
+<p class="mt-2 text-gray-700 dark:text-gray-300">HTML from scratch, styled with Tailwind; hosted on GitHub & published via Cloudflare. Built to highlight career projects; completed in two days (Sept 2025).</p>
+<div class="mt-4">
+<div class="text-sm font-semibold text-gray-800 dark:text-gray-200">Step-by-step</div>
+<ul class="mt-2 text-sm list-disc pl-5 text-gray-700 dark:text-gray-300 space-y-1">
+<li>Plan information architecture: sections (Overview, CRM, Infra, Pentaho, Conversational AI, AI, Web & Content, Media).</li>
+<li>Initialize repo (<code>index.html</code>, <code>assets/</code>, <code>.gitignore</code>); configure GitHub Pages branch.</li>
+<li>Build semantic HTML skeleton; add Tailwind CDN; set global typography and smooth scroll.</li>
+<li>Implement sticky nav with anchors; add “Home” link and brand link to <code>/index.html</code>.</li>
+<li>Create hero with gradient background and responsive image; add impact callout card.</li>
+<li>Design content cards for each section using grid, rounded corners, and soft shadows.</li>
+<li>Add light/dark support: system-pref + toggle; persist preference in <code>localStorage</code>.</li>
+<li>Optimize assets: compress images; use <code>alt</code> text; lazy-load where appropriate.</li>
+<li>SEO: set title/description, logical heading order, link to custom domain via Cloudflare DNS (A/CNAME) + SSL.</li>
+<li>Accessibility pass: color contrast (WCAG AA), focus states, skip-to-content semantics.</li>
+<li>Performance: minimize DOM, prefer system fonts + Inter, defer non-critical JS; measure in Lighthouse.</li>
+<li>Deploy: connect custom domain on Cloudflare; set caching rules and security headers.</li>
+<li>Post-launch: add repo link placeholders in each section; create print stylesheet (roadmap).</li>
+</div>
+</article>
+
+
+<!-- DLC Consultancy -->
+<article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
+<img class="rounded-xl mb-4" alt="Consultancy site" src="/assets/images/dlcsite.png"/>
+<h3 class="text-xl font-bold">DLC Consultancy (2024) · dlcconsultancy.com</h3>
+<p class="mt-2 text-gray-700 dark:text-gray-300">WIX site with SEO, services pages, lead capture, and light blogging for thought leadership.</p>
+<div class="mt-4">
+<div class="text-sm font-semibold text-gray-800 dark:text-gray-200">Step-by-step</div>
+<ul class="mt-2 text-sm list-disc pl-5 text-gray-700 dark:text-gray-300 space-y-1">
+<li>Select Wix template optimized for consulting; configure theme (color, typography, spacing).</li>
+<li>Define site map: Home, Services, Case Studies, Blog, Contact.</li>
+<li>Create service pages with clear CTAs and contact forms; enable reCAPTCHA & spam filtering.</li>
+<li>Integrate Calendly for discovery calls; set timezone & buffers.</li>
+<li>Implement lead capture: newsletter signup → mailing list with double opt-in.</li>
+<li>SEO: page titles/meta, open graph images, 301 redirects, custom domain mapping.</li>
+<li>Analytics: connect Google Analytics 4 and Search Console; configure event goals.</li>
+<li>Performance: compress hero media, defer third-party scripts, image lazy-loading.</li>
+<li>Compliance: cookie banner, privacy policy, and contact consent language.</li>
+<li>Publish and monitor: uptime checks, form submission alerts to Slack/email.</li>
+</div>
+</article>
+
+
+<!-- YMCA Drupal LMS -->
+<article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
+<img class="rounded-xl mb-4" alt="Drupal LMS" src="/assets/images/drupal.png"/>
+<h3 class="text-xl font-bold">YMCA South Palm Beach Florida Enablement Portal (2015)</h3>
+<p class="mt-2 text-gray-700 dark:text-gray-300">Drupal LMS on AWS: modular content, media workflows, role-based access, and ongoing maintenance.</p>
+<div class="mt-4">
+<div class="text-sm font-semibold text-gray-800 dark:text-gray-200">Step-by-step</div>
+<ul class="mt-2 text-sm list-disc pl-5 text-gray-700 dark:text-gray-300 space-y-1">
+<li>Requirements intake with YMCA staff; define personas (Admin, Instructor, Staff).</li>
+<li>Provision AWS (EC2 + RDS + S3); configure VPC, security groups, IAM roles.</li>
+<li>Install Drupal; enable modules for LMS (e.g., quiz, media, views) and role-based permissions.</li>
+<li>Design content types: Courses, Modules, Assessments, Resources; create taxonomies.</li>
+<li>Build page templates and navigation; add search and resource filters.</li>
+<li>Implement media pipeline: S3-backed storage; transcoding presets; responsive image styles.</li>
+<li>Authentication & authorization: roles, granular permissions, password policies.</li>
+<li>Analytics & reporting: completion tracking, quiz results exports for leadership.</li>
+<li>Backups & DR: automated snapshots, retention policy, restore runbooks.</li>
+</section>
   </section>
 
   <!-- MEDIA -->
