--- a/projects.html
+++ b/projects.html
@@ -806,7 +806,7 @@
 
 <!-- YMCA Drupal LMS -->
 <article class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl p-6">
-<img class="rounded-xl mb-4" alt="Drupal LMS" src="/assets/images/drupal.png"/>
+<img class="rounded-xl mb-4" alt="Drupal LMS" src="/assets/images/drupal.avif"/>
 <h3 class="text-xl font-bold">YMCA South Palm Beach Florida Enablement Portal (2015)</h3>
 <p class="mt-2 text-gray-700 dark:text-gray-300">Drupal LMS on AWS: modular content, media workflows, role-based access, and ongoing maintenance.</p>
 <div class="mt-4">
