--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
           <a href="#awards" class="hover:text-brand-700 whitespace-nowrap">Awards</a>
           <a href="#experience" class="hover:text-brand-700 whitespace-nowrap">Experience</a>
           <a href="/projects.html" class="hover:text-brand-700 whitespace-nowrap">Projects</a>
-          <a href="#certifications" class="hover:text-brand-700 whitespace-nowrap">Certifications</a>
-          <a href="#training" class="hover:text-brand-700 whitespace-nowrap">Training</a>
-          <a href="#education" class="hover:text-brand-700 whitespace-nowrap">Education</a>
+          <a href="#certifications" class="hover:text-brand-700 whitespace-nowrap">C.E.T.</a>
         </nav>
         <!-- No header Resume button -->
       </div>
@@ -381,7 +379,7 @@
 
       <!-- Certifications -->
       <section id="certifications" class="border-y border-slate-200 dark:border-slate-800 py-12 bg-slate-50 dark:bg-slate-900/40">
-        <h2 class="text-2xl md:text-3xl font-bold">Licenses & Certifications</h2>
+        <h2 class="text-2xl md:text-3xl font-bold">Certifications</h2>
         <ul class="mt-6 grid sm:grid-cols-2 xl:grid-cols-3 gap-4 text-sm">
           <li class="p-4 rounded-xl border bg-white/80 dark:bg-slate-950/50"><strong>Salesforce Certified AI Associate</strong> — Salesforce · Credential ID 4521941</li>
           <li class="p-4 rounded-xl border bg-white/80 dark:bg-slate-950/50"><strong>The Complete SQL Bootcamp</strong> — Udemy · Credential ID UC-f14b9fbd-875c-4dbb-acdb-38873ec8b3ac</li>
