--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
           </a>
         </div>
         <div class="relative">
-          <img class="w-full rounded-2xl shadow-2xl" alt="Portfolio visual" src="https://images.unsplash.com/photo-1553877522-43269d4ea984?q=80&amp;w=1600&amp;auto=format&amp;fit=crop" />
+          <img class="w-full rounded-2xl shadow-2xl" alt="Portfolio visual" src="/assets/images/mecoding.png" />
           <div class="absolute -bottom-4 -right-4 bg-white dark:bg-slate-900 shadow-lg rounded-xl p-4 border border-slate-200 dark:border-slate-800">
             <div class="text-sm font-semibold">Impact Snapshot</div>
             <ul class="mt-2 text-sm text-slate-600 dark:text-slate-300 list-disc pl-4">
