--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
       <div class="grid md:grid-cols-2 gap-10 items-center">
         <div>
-          <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">Unified Project Portfolio</h1>
+          <h1 class="text-3xl sm:text-5xl font-extrabold leading-tight">Technical Project Portfolio</h1>
           <p class="mt-4 text-lg text-slate-600 dark:text-slate-300">A forward-looking repository of infrastructure builds, data &amp; analytics, CRM engineering, conversational AI systems, and web content all drawn directly from deployments and consulting work I’ve personally delivered.</p>
             <br> <a href="https://github.com/cruizeone1" target="_blank" rel="noreferrer"
              class="inline-flex items-center justify-center gap-2 rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700 w-full sm:w-[240px]">
