--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
         </nav>
       </div>
     </div>
-  </header>>
+  </header>
 
   <!-- HERO -->
   <section id="top" class="relative overflow-hidden">
