--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
   <a href="#demo"
      class="no-print inline-flex items-center justify-center gap-2 rounded-xl bg-brand-600 text-white px-5 py-3 font-medium shadow hover:shadow-md hover:bg-brand-700
             w-full sm:w-[220px]"
-     title="See Me in Action (video reel)" aria-label="See Me in Action-Demo Videos Coming Soon">
+     title="See Me in Action (video reel)" aria-label="See Me in Action">
     <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
       <path d="M3 7a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v1l4-2v12l-4-2v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7z"/>
     </svg>
-    <span>See Me in Action</span>
+    <span>See Me in Action-Demo Videos Coming Soon</span>
   </a>
 
   <!-- 3) Technical Projects (gear) -->
