--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="space-y-6">
           <h2 class="text-4xl md:text-5xl font-extrabold leading-tight">
             Strategic Solutions Consultant
-            <span class="block text-brand-600">Bridging Sales, Tech & AI</span>
+            <span class="block text-brand-600">Sales, Tech & AI</span>
           </h2>
           <p class="text-lg text-slate-600 dark:text-slate-300">
             Strategic pre and post-sales partner specializing in AI-driven solutions, SaaS platform design & implementation,
